# L2_Projet_Technologique

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  TODO.txt  a.out  algo_solveur.txt  att_fct_test  attribution_des_fonctions_tests  create_archive.sh  date.txt  date2.txt  game.c  game.h  game.h.gch  game_io.c  main.c  model.c  net_ncurses  net_ncurses.c  net_sdl.c  net_solve.c  net_solve.h  net_text  net_text.c  rapport_final.tex  repartition-rapport.md  solve.c  solve.h  solve_main.c  test_MG.txt  test_avialar.c  test_kleguen  test_kleguen.c  test_mgendron.c  test_walouini.c  tests-dependences.md
android/: AndroidManifest.xml  README.md  build.xml
android/jni/src/: Android.mk  net_sdl.c  solve.c  solve.h
sdl/: pieces.xcf
